css/style.css
*:focus {
    outline: 0 !important;
  }

html {
    box-sizing: border-box;
}
  
*, 
*::before, 
*::after { 
    box-sizing: inherit;
}

:root {
      font-size: 62.5%
}
/* theme repository */
.theme-day {
    --background: #FFE2E2;
    --selected-border: 2px solid #333456;
    --background-image: linear-gradient(190deg, #f6f6f6, #ffc7c7, #ffe2e2);
    --background-size: 600% 600%;
    --bg-animation: bg-scroll 15s ease infinite;
    --field-bg: #F6F6F6;
    --border-radius: 50px;
    --field-box-shadow: inset 40px -40px 72px #ececec, inset -40px 40px 72px #ffffff;
    --color: #000;
    --font-family: 'Kaushan Script', cursive, sans-serif;
    --background-image-canvas: url('../assets/sets-and-scoring/sets-light.jpg');
    --background-image-deck: url('../assets/tiles/back.jpeg')
}

.theme-night {
    --background: #333456;
    --accent: #595B83;
    --selected-border: 2px solid #F4ABC4;
    --background-image: linear-gradient(190deg, #595b83, #333456, #060930);
    --background-size: 600% 600%;
    --bg-animation: bg-scroll 40s ease infinite;
    --field-bg: #595B83;
    --border-radius: 50px;
    --field-box-shadow: inset 40px -40px 72px #55577e, inset -40px 40px 72px #5d5f88;
    --color: #FFF;
    --font-family: 'Sawarabi Mincho', sans-serif;
    --background-image-canvas: url('../assets/sets-and-scoring/sets-dark.jpg');
    --background-image-deck: url('../assets/tiles/back.jpeg')
}

.theme-mario-day {
    --background-image: url('../assets/mario-bg/mario-day-bg.jpg');
    --background: #43B047;
    --background-size: cover;
    --color: black;
    --font-family: 'Bangers', cursive, sans-serif;
    --selected-border: 2px solid yellow;
    --field-bg: rgba(255, 255, 255, 0.8);
    --background-image-deck: url('../assets/mario-tiles/mario-deck-back.jpg')
}

.theme-mario-night {
    --background-image: url('../assets/mario-bg/mario-night-bg.jpg');
    --background: black;
    --background-size: cover;
    --color: white;
    --font-family: 'Bangers', cursive, sans-serif;
    --selected-border: 2px solid #E52521;
    --field-bg: rgba(255, 255, 255, 0.4);
    --background-image-deck: url('../assets/mario-tiles/mario-deck-back.jpg')
}

/* /theme repository */

body {
    background: var(--background);
    background-size: var(--background-size);
    background-image: var(--background-image);
    -webkit-animation: var(--bg-animation);
    -moz-animation: var(--bg-animation);
    animation: var(--bg-animation);
    background-repeat: no-repeat;
    color: var(--color);
    display: flex;
    flex-direction: column;
    font-family: var(--font-family);
    height: 100vh;
    margin: 0;
    overflow-x: hidden;
}

header {
    display: flex;
    margin-bottom: 3rem;
}

nav {
    background: var(--background)
}

navbar button {
    margin: 5px auto;
}

img {
    border: 1px solid lightgrey;
    height: auto;
    margin: 5px;
    object-fit: contain;
    width: 60px;
}

#mario-toggle img {
    width: 24px;
    border: none;
}

.title-header {
    border: 1px solid white;
    margin-left: 1.5rem;
}

.btn-text {
    color: var(--color)
}

.core-display {
    display: flex;
    padding: 1vh;
    align-items: center;
}

#dropdownMenuButton1 {
    margin-right:1.5rem;
}

#day-toggle {
    border-radius: 5px;
}

.deck-container {
    display: flex;
    flex-direction: column;
}

#deck {
    content: var(--background-image-deck);
    border: none;
    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
    height: auto;
    width: 60px;
}

.field-container{
    align-items: center;
    background: var(--field-bg);
    border-radius: var(--field-radius);
    box-shadow: var(--field-box-shadow);
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: center;
    min-width: 400px;
    padding: 2rem;
    width: 70%;
    z-index: 1
}

.player-hand-container {
    align-items:center;
    display:flex;
    justify-content: center;
    padding: 2rem;
    max-width: 100%;
}

.player-hand-container img,
.computer-hand-container img {
    width: 50px;
}

.player-hand-container img:hover {
    width: 80px;
}

.field {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
}

.field::after {
    content: "";
    flex: auto;
}

.field div {
    width: 25%;
}

.field img:hover {
    filter: brightness(70%)
}

.player-hand,
.computer-hand {
    align-items: center;
    display: flex;
    flex-direction: row;
    flex-flow:row nowrap;
    justify-content: center;
}

.offcanvas {
    width: 100vw;
}

.offcanvas-body {
    border: none;
    align-items: center;
    background-color: var(--background);
    background-image: var(--background-image-canvas);
    background-size: cover;
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;
    width: 100%;
}

.selected {
    border-bottom: var(--selected-border)
}

#carouselIndicators,
.carousel-item img{
    width: 100%
}

#offcanvasBottom {
    width: 100%;
    height: 30vh;
}

#score-modal {
    background-image: var(--background-image-canvas)
}

#set-overlay,
#mario-set-overlay {
    width: auto;
    height: 100%;
    border: none;
}

#suit-overlay {
    border: 0;
    overflow-y: scroll;
    justify-content: start;
}

#suit-overlay img {
    width: 45rem;
}

#nav-title {
    margin-left: 2rem;
    margin-top:.4rem;
}

.modal button {
    background: var(--background);
    color: var(--color)
}

.modal-footer {
    background:var(--accent)
}

.drawer {
    display: flex;
    flex-direction: row;
    overflow-y: hidden;
    overflow-x: auto;
}

.player-hand > div:hover {
    cursor: pointer;
}

.feild > div:hover {
    cursor: pointer;
}

.hidden {
    display: none;
}

#deck:hover {
    cursor: pointer;
}

#score-pile-btn{
    bottom: 0;
    position: fixed;
    right: 0;
    width: 100%;
}

@-webkit-keyframes bg-scroll {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@-moz-keyframes bg-scroll {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@keyframes bg-scroll {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}

@media only screen and (min-width: 650px) {

    #deck {
        width: 80px;
    }

    .field img {
        width: 80px;
    }

    #carouselIndicators,
    .carousel-item img{
        width: 60%
    }
}

@media only screen and (min-width: 768px) {

    .core-display {
        width: 100%;
        justify-content: center;
    }

    .field-container{
        width: 70%;
        margin-left: 4rem;
    }

    .field {
        padding: 4rem;
    }

    .player-hand-container img {
        width: 80px;
    }
}

@media only screen and (min-width: 1024px) {

    header {
        margin-bottom: 20px;
    }

    img {
        width: 90px;
    }
        
    .core-display {
        width: 100%;
        justify-content: center;
    }

    .field-container{
        width: 60%;
        margin-left: 4rem;
    }

    .field {
        width: 100%;
        padding: 4rem;
    }

    #carouselIndicators,
    .carousel-item img{
        width: 35%
    }

    .player-hand-container img:hover{
        filter: brightness(70%);
    }

    .field img:hover {
        filter:brightness(70%);
    }

    .computer-hand-container {
        margin-top: 0px;
    }
}

